Add candidate summary endpoints and enhance resume summary extraction logic